apps/media/sonarr/http-route.yml
kind:       HTTPRoute
apiVersion: gateway.networking.k8s.io/v1

metadata:
  name:      sonarr-httproute
  namespace: media
  metadata:
    annotations:
      argocd.argoproj.io/sync-wave: "1"   # doesn't work across Applications

spec:
  parentRefs:
    - name:      traefik-gateway
      namespace: traefik            # because traefik-gateway is in the traefik namespace
      sectionName: web

  hostnames:
    - sonarr.localhost

  rules:
    - matches:
        - path:
            type:  PathPrefix
            value: /

      backendRefs:
        - name: sonarr
          port: 8989
